--- a/index.html
+++ b/index.html
@@ -7,5 +7,45 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <header>
+        <div class="header__logo"> 
+            <img src="img/header__projeco_logo.png" alt="logotype">
+        </div>
+        <div class="header__presents">
+            <h1>PARTNER WITH KONSTUCT</h1>
+            <p>An award-winning construction management firm</p>
+        </div>
+        <div class="header__scroll">
+            <p>SCROLL DOWN</p>
+        </div>
+    </header>
+    <div class="section__navbar">
+        <div class="nav__logo">
+            <img src="img/navbar__projeco_logo_black.png" alt="logotype">
+        </div>
+        <div class="menu__panel">
+            <ul>
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>SERVICES</li>
+                <li>WORK</li>
+                <li>CONTACTS</li>
+            </ul>
+        </div>
+    </div>
+    <div class="section__about">
+        <h3>OUR STORY</h3>
+        <p>Founded in 2011 by John Mathew Smith, <span>Konstruct</span> has become the number one construction management firm</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quos, voluptate, aliquid eius aut, ut ratione officiis molestiae porro accusantium nesciunt odio. Omnis molestiae nam voluptatibus id veniam fugiat alias!</p>
+        <div class="about__card1">
+
+        </div>
+        <div class="about__card2">
+            
+        </div>
+        <div class="about__card3">
+            
+        </div>
+    </div>
 </body>
 </html>
