--- a/index.html
+++ b/index.html
@@ -56,7 +56,33 @@
                 </div>
             </div>
         </div>
-       
+    </div>
+    <div class="services__section">
+        <div class="services__header">
+            <div>
+                <h3>OUR CAPABILITIES</h3>
+                <img src="./img/Line.png" alt="line">
+             </div>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            <button>ALL SERVICES</button>
+        </div>
+        <div class="service__cards">
+            <div class="service__card">
+                <img src="./img/service__bitmap.png" alt="service_img">
+                <h5>PROJECT AND CONSTRUCTION MANAGEMENT</h5>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="service__card">
+                <img src="./img/service__mag.png" alt="service_img">
+                <h5>STRUCTURE AUDIT AND MAINTENANCE</h5>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="service__card">
+                <img src="./img/service__bank.png" alt="service_img">
+                <h5>FACTORY CONSTRUCTION AND MODELING</h5>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
