--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -64,7 +67,7 @@
                 <img src="./img/Line.png" alt="line">
              </div>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
-            <button>ALL SERVICES</button>
+            <button class="btn">ALL SERVICES</button>
         </div>
         <div class="service__cards">
             <div class="service__card">
@@ -83,6 +86,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
             </div>
         </div>
+    </div>
+    <div class="get_in_touch">
+        <p>Want to build <br> something amazing?</p>
+        <button class="btn">GET IN TOUCH</button>
     </div>
 </body>
 </html>
