added input section

--- a/index.html
+++ b/index.html
@@ -91,5 +91,12 @@
         <p>Want to build <br> something amazing?</p>
         <button class="btn">GET IN TOUCH</button>
     </div>
+    <div class="newsletter">
+        <div>
+            <p>Newsletter Signup</p>
+                <input type="text" placeholder="test@youremail.com">
+                <button class="btn">SIGNUP</button>
+        </div>
+    </div>
 </body>
 </html>
